--- a/index.html
+++ b/index.html
@@ -1,5 +1,23 @@
-Sobre a Barbearia Alura
+<!DOCTYPE html>
+<html lang="pt-br">
+   <head>
+    <meta charset="UTF-8>
+    <title>Barbearia Alura<title>
+    <link rel="stylesheet" href="styles.css">
+   </head>
 
-Localizada no coração da cidade a barbearia alura traz para o marcado o que há de melhor para o seu cabelo e barba. Fundada em 2019, a Barbearia Alura já é destaque na cidade e conquista novos clientes a cada dia.
-Nossa missão: "Proporcionar autoestima e qualidade de vda aos clientes".
-Oferecemos proficssionais experientes e antenados as mudanças no mundo da moda. O antendimento possui padrão de exelência e agilidade, garantindo qualidade e satisfação dos nossos clientes.
+  <body>
+    <header>
+      <h1 claass="titulo-principal"> Barbearia Alura</h1>
+    </header>
+    <img id="banner" scr="baner.jpg">
+    <div class="principal">
+        <h2 clas="titulo-centralizaado">Sobre a Barbearia alura</h2>
+
+      <p>Localizada no coração da cidade a <strong>Barbearia Alura</strong> traz para o mercado o que há de melhor para o seu cabelo e barba. Fundada em 2019, a Barabearia Alura já é destque na cidade e conquista novos clientes a cada dia.</p>
+
+      <p id="missao"><em>Nossa missão é: <strong>"Proporcionar auto-estima e qualidade de vida aos clientes"</strong>.</em></p>
+
+      <p>Oferecemos proficionais experientes e antenados às mudanças no mundoda moda. O antendimnto possui padrão de excelência e agilidade, garantindo qualiade e satisfação dos nossos clientes.</p>
+    </div>
+  </body>
