--- a/index.html
+++ b/index.html
@@ -20,4 +20,18 @@
 
       <p>Oferecemos proficionais experientes e antenados às mudanças no mundoda moda. O antendimnto possui padrão de excelência e agilidade, garantindo qualiade e satisfação dos nossos clientes.</p>
     </div>
+    
+     <div class="beneficios">
+         <h3 class="titulo-centralizado">Benefícios</h3>
+
+     <ul>
+        <li class="itens">Atendimento aos Clientes</li>
+        <li class="itens">Espaço diferenciado</li>
+        <li class="itens">Localização</li>
+        <li class="itens">Proficionais Qualificados</li>
+     </ul>
+
+     <img src="beneficios.jpg" class="imagembeneficios">
+     </div>
   </body>
+</html>
